tests/golden/type_errors/map_clear_member_non_map.err
Type error at 2:13: clear expects map receiver, got number
  value.clear();
              ^
